changed project structure (so that empty jspm baseUrl) to (hopefully) avoid karma-jspm issues

--- a/package.json
+++ b/package.json
@@ -38,10 +38,7 @@
     "minimist": "1.2.0"
   },
   "jspm": {
-    "directories": {
-      "baseURL": "src"
-    },
-    "configFile": "src/jspm.conf.js",
+    "configFile": "jspm.conf.js",
     "dependencies": {
       "bootstrap-sass": "github:twbs/bootstrap-sass@3.3.7",
       "css": "github:systemjs/plugin-css@0.1.27",
