--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
     "no-param-reassign": 0,
     "no-trailing-spaces": ["error", {"skipBlankLines": true}],
     "max-len": [2, 120, {"ignoreComments": true}],
+    "space-before-function-paren": [2, "never"],
 
     "import/no-extraneous-dependencies": "off",
     "import/no-unresolved": "off", //disable because a lot of module dependencies are via jspm
